# embryo

./: .gitignore  CMakeLists.txt  Makefile  README.md  compile.sh  model_view.c  proto_1.c  proto_2.c  ref.c  run.sh  txtref.c
anim/: txt_alpha_init.c  txt_alpha_init.h  txt_alpha_state.h  txt_alpha_update.c  txt_alpha_update.h
bkp/: cmdqref.c  model_conv.cpp  model_view.c  padref.c
cmdq/: enqueue.h  fn.h  node.h  tail.c  update.c  update.h
color_quad/: draw.c  draw.h  prepare.h  set.c
err/: abort_because.h  assert_gl_ok.h  assert_int.h
fnt/: find_char_info.h  info.h  load.c  load.h  load_info.c  load_info.h
geom/: full_screen_quad.c
gl/: init.c  load_buf.c  load_dds.h  should_close.c  should_close.h  swap.h  wnd.h
glsl/: load_program.h  load_shader.c
include/: array.h  cppfn.h  err.h  file.h  gl.h  glsl.h  mat.h  math.hpp  maths.h  model.h  pad.h  stg.h  str.h  sys.h  vec.h
io/: print.c  print.h
math/: axis.c  axis_rot.h  euler_rot.c  identity.c  intvec2.h  mat_mul.cpp  mat_mul.h  normalize.h  perspective.cpp  pi.h  proportional_scale.c  radians.h  scale.cpp  scale.h  translate.cpp  translate.h  vec3.h  vec3_assign.h
mem/: array_len.h  bzero_array.h  callocptr.h  mallocptr.h  offsetof.h
model/: bind_tex.c  bind_tex.h  bind_va.c  bind_va.h  draw.c  load.c  load_bufs.c  load_bufs.h  load_idxtab.h  load_tex.c  load_tex.h  model.h
other/: cppfn.h
pad/: pad.h  reset.h  update.h
src/: file.c  gl.c  glsl.c  main.c  mat.c  math.cpp  model.c  pad.c  stg.c  str.c  sys.c  vec.c
stg/: block.h  init+update.c  init.h  load_spec.c  obj_type.h  play.c  play.h  player.h  push_block.c  push_block.h  query_at.c  query_at.h  recompute_slotted_blocks.c  recompute_slotted_blocks.h  slot.h  stg.h  wall.h
str/: arrcpy.h  chrcount.c  consume.c  consume.h  skip.c  (+1 more)
(+249 files in other folders)
